--- a/springboot-demo/pom.xml
+++ b/springboot-demo/pom.xml
@@ -41,6 +41,29 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${spotify.version}</version>
+				<configuration>
+					<repository>ebsservices/${project.artifactId}</repository>
+					<tag>${project.version}</tag>
+					<dockerfile>DockerFile</dockerfile>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default</id>
+						<phase>install</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>push</goal>
+						</goals>
+					</execution>
+				</executions>
+				</plugin>
 		</plugins>
 	</build>
 
